<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/InformationalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_element_information"
            android:textAlignment="center" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TempoInputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tempo"
            android:inputType="number"
            android:minHeight="48dp"
            android:singleLine="true" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/BarNumberInputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bar_number"
            android:inputType="number"
            android:minHeight="48dp"
            android:singleLine="true" />


        <CheckBox
            android:id="@+id/Interpolate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interpolate" />
    </LinearLayout>

    <Button
        android:id="@+id/ConfirmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>