<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="@dimen/_316sdp"
        android:layout_height="@dimen/_500sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/CancelButton"
        android:layout_width="197dp"
        android:layout_height="39dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ConfirmButton"
        android:layout_width="202dp"
        android:layout_height="39dp"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/CancelButton"
        app:layout_constraintTop_toTopOf="@+id/CancelButton"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ExecuteProgram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/program_play_button"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProgramName"
        app:srcCompat="@android:drawable/ic_media_play" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/NewElementButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/create_new_element"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProgramName"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ProgramName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/program_name"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@+id/graph" />

</androidx.constraintlayout.widget.ConstraintLayout>