<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="dynamicmetronome.activities.MainActivity" >

        <!--LinearLayout controlling tempo configuration UI elements-->
        <LinearLayout
            android:id="@+id/TempoControlLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent" >

            <NumberPicker
                android:id="@+id/TempoNumberPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/TempoSelectionInstructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_tempo"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/TempoSeekbar"
                app:layout_constraintTop_toBottomOf="@+id/TempoNumberPicker"
                android:gravity="center_horizontal" />

            <SeekBar
                android:id="@+id/TempoSeekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/TempoSelectionInstructions" />
        </LinearLayout>

        <!--LinearLayout Controlling m_volume sliders and mute switches-->
        <LinearLayout
            android:id="@+id/VolumeControlLinearLayout"
            app:layout_constraintTop_toBottomOf="@+id/TempoControlLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2" >

            <SeekBar
                android:id="@+id/QuarterVolume"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:layout_constraintBottom_toBottomOf="@+id/QuarterPlaying"
                app:layout_constraintTop_toTopOf="@+id/QuarterPlaying" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/QuarterPlaying"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/quarter_volume" />
        </LinearLayout>

        <!--Constraint controlling the action buttons-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ButtonsControlLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent" >

            <Button
                android:id="@+id/ProgramsButton"
                android:text="@string/programs_button"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/StartStopButton"
                app:layout_constraintBottom_toBottomOf="@id/StartStopButton" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/StartStopButton"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:contentDescription="@string/play"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_media_play"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>