<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <NumberPicker
        android:id="@+id/Tempo"
        android:layout_width="415dp"
        android:layout_height="141dp"
        android:layout_marginTop="56dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/QuarterMute"
        android:layout_width="205dp"
        android:layout_height="33dp"
        android:layout_marginTop="576dp"
        android:text="@string/quarter_volume"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/StartStopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="@+id/QuarterMute"
        app:layout_constraintTop_toBottomOf="@+id/QuarterMute"
        app:srcCompat="@android:drawable/ic_media_play"
        android:contentDescription="@string/play"
        android:focusable="true" />

    <SeekBar
        android:id="@+id/QuarterVolume"
        android:layout_width="205dp"
        android:layout_height="33dp"
        app:layout_constraintBottom_toBottomOf="@+id/QuarterMute"
        app:layout_constraintEnd_toStartOf="@+id/QuarterMute"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/QuarterMute" />

    <SeekBar
        android:id="@+id/TempoSeekbar"
        android:layout_width="413dp"
        android:layout_height="36dp"
        android:layout_marginTop="68dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tempo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/select_tempo"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/TempoSeekbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tempo"
        app:layout_constraintVertical_bias="0.34" />
</androidx.constraintlayout.widget.ConstraintLayout>